fix: update system response
