# openapi.yml
@@ -31,13 +31,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  admin_id:
-                    type: string
-                    format: uuid
-                required:
-                  - admin_id
+                $ref: "#/components/schemas/AdminResponse"
         "400":
           description: 不正リクエスト
         "500":
@@ -99,13 +93,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  reservation_id:
-                    type: string
-                    format: uuid
-                required:
-                  - reservation_id
+                $ref: "#/components/schemas/ReservationResponse"
         "400":
           description: 不正リクエスト
         "404":
@@ -209,13 +197,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  schedule_id:
-                    type: string
-                    format: uuid
-                required:
-                  - schedule_id
+                $ref: "#/components/schemas/ScheduleResponse"
         "401":
           description: Unauthorized
         "400":
@@ -248,8 +230,12 @@ paths:
               required:
                 - max_number
       responses:
-        "204":
+        "200":
           description: 成功
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ScheduleResponse"
         "401":
           description: Unauthorized
         "404":
